--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: J3etBrainsMono Nerd Font;
+    font-family: JetBrainsMono;
     font-size: 13px;
     min-height: 0;
 }
